fixed migration, refactoring, more tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - S3_BUCKET
       - S3_PUBLIC
       - DB_DSN=postgres://$DBUSER:$DBPASS@db/$DBNAME
+      - TEST_DSN=postgres://$DBUSER:$DBPASS@db/$DBNAME
     volumes:
       - .:/app
   db:
