--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     build:
       context: .
-    working_dir: /app
+    restart: always
     environment:
       - S3_ENDPOINT
       - S3_KEY
@@ -11,43 +11,17 @@ services:
       - S3_BUCKET
       - S3_PUBLIC
       - DB_DSN=postgres://$DBUSER:$DBPASS@db/$DBNAME
-      - TEST_DSN=postgres://$DBUSER:$DBPASS@db/$DBNAME
-    volumes:
-      - .:/app
     depends_on:
       - db
-      - minio
-    logging: &default_logging
-      driver: json-file
-      options:
-        max-size: "1m"
-        max-file: "5"
   db:
     image: postgres:15
     restart: always
     volumes:
       - db-data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     environment:
       POSTGRES_PASSWORD: $DBPASS
       POSTGRES_USER: $DBUSER
       POSTGRES_DB: $DBNAME
-    logging: *default_logging
-  minio:
-    image: bitnami/minio
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    volumes:
-      - minio-data:/data
-    environment:
-      - MINIO_ROOT_USER=$S3_KEY
-      - MINIO_ROOT_PASSWORD=$S3_SECRET
-      - MINIO_DEFAULT_BUCKETS=$S3_BUCKET:public
-    logging: *default_logging
 volumes:
   db-data:
-    driver: local
-  minio-data:
     driver: local
