--- a/.air.toml
+++ b/.air.toml
@@ -2,6 +2,6 @@ root = "."
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "go build -o /tmp/indexer cmd/indexer/main.go"
+cmd = "go build -o /tmp/indexer cmd/indexer/*.go"
 # Binary file yields from `cmd`.
 bin = "/tmp/indexer"
