--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -15,6 +15,8 @@ services:
       - TEST_DSN=postgres://$DBUSER:$DBPASS@db/$DBNAME
     volumes:
       - .:/app
+    ports:
+      - "8080:8080"
     depends_on:
       - db
       - minio
