added linter and tests to makefile fixed lint issues added multiplatform deploy to ghcr.io

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: "3.9"
 services:
   app:
-    build:
-      context: .
+    image: ghcr.io/elnoro/indexer
     restart: always
     environment:
       - S3_ENDPOINT
