switched to go1.21 switched to dagger 0.9.6

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,3 +6,9 @@ linters:
     - prealloc
     - unparam
     - bodyclose
+    - errcheck
+    - gosimple
+    - govet
+    - ineffassign
+    - staticcheck
+    - unused
